[package]
authors = ["Manuel Forcén Muñoz <manuforcen@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "rus-tos"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.


[dependencies.stm32f2]
version = "0.14.0"
features = ["stm32f215", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "rus-tos"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[build-dependencies]
cc = "1.0.25"